Kokoa Clone 2020 Update 201130

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,17 @@
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-conponent.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
-  font-family: "Nerko One", cursive;
+  color: #2e363e;
   font-family: "Open Sans", sans-serif;
-  height: 1000vh;
+}
+
+.main-screen {
+  padding: 0px var(--horizonal-space);
 }
