--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,7 +1,8 @@
 .status-bar {
+  top: 0;
   width: 100%;
   box-sizing: border-box;
-  position: fixed;
+
   display: flex;
   justify-content: space-between;
   padding: 5px 3px;
