--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -16,25 +16,15 @@
   color: #2e363e;
 }
 .nav__notification {
-  background-color: tomato;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-weight: 600;
   position: absolute;
   left: 15px;
   bottom: 15px;
 }
 .nav__notification--ellipsis {
-  color: tomato;
+  border: 3px solid tomato;
+  border-radius: 50%;
   position: absolute;
-  font-size: 1px;
   justify-content: center;
   align-items: center;
-  right: -5px;
-  top: -15px;
+  right: -10px;
 }
