--- a/css/components/user-conponent.css
+++ b/css/components/user-conponent.css
@@ -22,7 +22,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 17px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--grey-text);
 }
 
 .user-component__avatar--xl {
@@ -41,5 +41,13 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-coponent__time {
+  margin-bottom: 10px;
+  display: block;
 }
