--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,11 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-conponent.css";
+@import "components/badge.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   color: #2e363e;
