--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,9 +3,8 @@
   top: 0;
   width: 100%;
   box-sizing: border-box;
-
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 5px 3px;
 }
 .status-bar__column {
