--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -25,3 +25,17 @@
 .screen-header__icons .fa-cog:hover {
   animation: rotateCog 1s linear infinite;
 }
+
+.screen-header__icons {
+  position: relative;
+}
+
+.screen-header__icons-reddot {
+  border: 3px solid tomato;
+  border-radius: 50%;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  right: -4px;
+  top: -9px;
+}
